Revert "Use JRE instead of JDK Desktop Binary"